정수 삼각형 코틀린 코드 추가